# MJMrss

./: .Rbuildignore  .gitignore  .gitmodules  COPYING  DESCRIPTION  LICENSE  NAMESPACE  aclocal.m4  config.status  configure  configure.ac
R/: RcppExports.R  model.R  zzz.R
man/: MJMrss-package.Rd  Model-class.Rd  Model.Rd  ModelTransient-class.Rd  ModelTransient.Rd  Rcpp_Model-cash-distribution.Rd  Rcpp_Model-cash-level_busy_servers.Rd  Rcpp_Model-cash-level_description.Rd  Rcpp_Model-cash-level_serviced_clients.Rd  Rcpp_Model-cash-transient_analysis.Rd  Rcpp_ModelTransient-cash-distribution.Rd  Rcpp_ModelTransient-cash-mean_clients.Rd  Rcpp_ModelTransient-cash-mean_queue.Rd  build_model.Rd  set_num_of_threads.Rd
src/: Makefile  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  dist.cpp  dist.h  eigen_wrap.h  eigen_wrap.h.in  main.cpp  main.h  main.hpp  matrices.cpp  matrices.h  matrices.hpp  model.cpp  state.cpp  state.h  state.hpp
